<resources>
    <string name="app_name">Shuffle-Showdown</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--  fragment_cuecard_detail.xml  -->
    <string name="card_term">Card Question</string>
    <string name="definition">Question</string>
    <string name="card_def">Card Answer</string>
    <string name="card_fake1">Fake Answer 1</string>
    <string name="card_fake2">Fake Answer 2</string>
    <string name="card_fake3">Fake Answer 3</string>
    <string name="answer_here">Answer text here</string>
    <string name="fake_answer">Fake Answer text here</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>
    <string name="logout">Logout</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="flip">FLIP</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="loading">Loading...</string>
    <string name="singleplayer">SINGLEPLAYER</string>
    <string name="study">STUDY</string>
    <string name="multiplayer">Multiplayer</string>
    <string-array name="rounds_array">
        <item>1 round</item>
        <item>2 rounds</item>
        <item>3 rounds</item>
        <item>4 rounds</item>
        <item>5 rounds</item>
        <item>Entire Deck</item>
    </string-array>

    <string-array name="time_array">
        <item>Unlimited Time</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
    </string-array>
</resources>