<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shuffle_showdown.ui.cards.CardsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_card_list" >
        <action
            android:id="@+id/action_nav_home_to_cueCardDetailFragment"
            app:destination="@id/cueCardDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.shuffle_showdown.ui.play.PlayFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_play" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.shuffle_showdown.ui.invites.InviteFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_invite" />

    <fragment
        android:id="@+id/cueCardDetailFragment"
        android:name="com.example.shuffle_showdown.ui.CueCardDetailFragment"
        android:label="Cue Card Detail"
        tools:layout="@layout/deck_list_item" />
</navigation>