<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.play.PlayFragment">

    <Button
        android:id="@+id/btnStudy"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="150dp"
        android:text="@string/study"
        app:icon="@drawable/baseline_menu_book_24"
        app:iconGravity="textTop"
        app:iconPadding="20dp"

        app:iconSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSingleplayer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/singleplayer"

        app:icon="@drawable/ic_play"
        app:iconGravity="textTop"
        app:iconPadding="20dp"
        app:iconSize="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStudy" />

    <Button
        android:id="@+id/btnMultiplayer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/multiplayer"
        app:icon="@drawable/ic_people"
        app:iconGravity="textTop"
        app:iconPadding="20dp"
        app:iconSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStudy" />
</androidx.constraintlayout.widget.ConstraintLayout>