<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/switches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/singleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="Single Input"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/mcButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="Multiple Choice" />
    </RadioGroup>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:padding="10dp"
        android:visibility="visible"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switches">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:id="@+id/cardTerm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:text="@string/card_term" />


                <EditText
                    android:id="@+id/editTerm"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:hint="@string/definition"
                    android:inputType="textEmailAddress"
                    android:maxLength="60"/>
            </LinearLayout>

            <Space
                android:id="@+id/spaceDivide"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                app:layout_constraintTop_toBottomOf="@id/cardTerm" />

            <LinearLayout
                android:id="@+id/cardDefinition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spaceDivide">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:text="@string/card_def" />

                <EditText
                    android:id="@+id/editDefinition"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:hint="@string/answer_here"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <Space
                android:id="@+id/spaceDivide2"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                app:layout_constraintTop_toBottomOf="@id/cardDefinition" />

            <LinearLayout
                android:id="@+id/cardFakeAnswer1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spaceDivide2">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:text="@string/card_fake1" />

                <EditText
                    android:id="@+id/editFakeAnswer1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/fake_answer"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <Space
                android:id="@+id/spaceDivide3"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                app:layout_constraintTop_toBottomOf="@id/cardFakeAnswer1" />

            <LinearLayout
                android:id="@+id/cardFakeAnswer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spaceDivide3">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:text="@string/card_fake2" />

                <EditText
                    android:id="@+id/editFakeAnswer2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/fake_answer"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <Space
                android:id="@+id/spaceDivide4"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                app:layout_constraintTop_toBottomOf="@id/cardFakeAnswer2" />

            <LinearLayout
                android:id="@+id/cardFakeAnswer3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spaceDivide4">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="3dp"
                    android:text="@string/card_fake3" />

                <EditText
                    android:id="@+id/editFakeAnswer3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/fake_answer"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="16dp"
                android:drawableLeft="@drawable/baseline_check_24"
                android:padding="8dp"
                android:text="@string/Save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardFakeAnswer3" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="42dp"
                android:drawableLeft="@drawable/baseline_delete_24"
                android:drawablePadding="5dp"
                android:padding="8dp"
                android:text="@string/Delete"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardFakeAnswer3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>