<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cardBg2"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/card_bg" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardContainerStudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cardBg"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:src="@drawable/card_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/msg_label"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:text="@string/loading"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/cardBg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cardBg" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/msgInputLayout"
                android:layout_width="280dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardBg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/msg_label">

                <TextView
                    android:id="@+id/msg"
                    android:layout_width="275dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/loading"
                    android:gravity="center"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFlip"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/flip"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardContainerStudy" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFlip">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPrev"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/prev"
            app:cornerRadius="4dp" />

        <View
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="0.1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/next"
            app:cornerRadius="4dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>